gateway/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-gateway-to-backend
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - strdss-dev-backend
          - strdss-test-backend
          - strdss-uat-backend
          - strdss-prod-backend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environment: test
              name: cc9a8a
    - from:
        - namespaceSelector:
            matchLabels:
              environment: prod
              name: cc9a8a
